# pq-eth-demo

./: .gitignore  .gitmodules  CLAUDE.md  build.py  deployments.json  foundry.toml  test_falcon_e2e.py  test_full_flow.py  test_go_decode.py
agents/: shared_context.md
agents/backend/: objective.md  specification.md
agents/chain/: objective.md  specification.md
agents/contracts/: objective.md  specification.md
agents/explorer/: objective.md  specification.md
agents/frontend/: objective.md  specification.md
backend/: Dockerfile  README.md  go.mod  go.sum  main.go
backend/api/: chain.go  explorer.go  message.go  migrate.go  relay.go  server.go  wallet.go
backend/chain/: client.go  contracts.go  falcon_decode.go  falcon_decode_test.go  falcon_ntt_test.go  indexer.go
backend/config/: config.go
backend/data/: backend.db  backend.db-shm  backend.db-wal
backend/db/: db.go  (+2 more)
cache/: solidity-files-cache.json
chain/: README.md  get_rpc_url.sh  network_params.yaml  rpc_url.txt  start.sh  stop.sh  test_precompiles.sh
contracts/: README.md  deploy.sh  foundry.toml
explorer/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/: README.md  build.sh  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/pq-wasm/: Cargo.toml
frontend/pq-wasm/.cargo/: config.toml
frontend/pq-wasm/pqc_dilithium_r3/: .cargo_vcs_info.json  Cargo.toml
frontend/pq-wasm/pqc_dilithium_r3/src/: packing.rs  params.rs  sign.rs
frontend/pq-wasm/src/: lib.rs
(+91 files in other folders)
